# student-card

./: .coverage  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  std.py  student_card.html
src/models/: student.py  student_card.py
src/services/: card_service.py  card_validator.py
src/utils/: thai_date.py
src/views/: card_renderor.py
tests/: test_card_service.py  test_student.py  test_student_card.py
