[project]
name = "student-card-system"
version = "1.0.0"
description = "Student ID Card Management System"
requires-python = ">=3.10"
[project.dependencies]
python-dotenv = ">=1.0.0"
pydantic = ">=2.5.0"
[project.optional-dependencies]
web = ["fastapi", "uvicorn", "jinja2"]
pdf = ["reportlab", "weasyprint"]
dev = ["pytest", "pytest-cov"]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]